--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@aws-sdk/s3-request-presigner": "^3.723.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@langchain/core": "^0.3.30",
+    "@langchain/openai": "^0.3.17",
+    "@langchain/pinecone": "^0.1.3",
+    "@pinecone-database/pinecone": "^4.1.0",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@tanstack/react-virtual": "^3.11.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
